--- a/about/index.html
+++ b/about/index.html
@@ -4,6 +4,6 @@
     </HeaderLink> --> <a href="/about" class="active header-link flex items-center gap-1"> <svg width="1em" height="1em" data-icon="ic:baseline-info">   <symbol id="ai:ic:baseline-info" viewBox="0 0 24 24"><path fill="currentColor" d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10s10-4.48 10-10S17.52 2 12 2m1 15h-2v-6h2zm0-8h-2V7h2z"/></symbol><use href="#ai:ic:baseline-info"></use>  </svg>关于 </a> </div> </nav> </header> <div class="mx-auto px-4">  <article> <div class="title"> <h1></h1> </div> <p>关于本站</p>
 <p>这是一个 blog</p>
 <p>使用 Astro 构建</p>
-<p>部署在 Github Pages</p> </article>  <footer class="gap-2 my-8 flex justify-center items-center">
+<p>部署在 Github Pages</p> </article>  <footer class="flex my-8 flex-col items-center">  <div class="gap-2 flex justify-center items-center">
 Copyright &copy; 2024 <span>icealtria</span>|
-<a href="/atom.xml">RSS</a> </footer> </div> </body></html>
+<a href="/atom.xml">RSS</a> </div> </footer> </div> </body></html>
