--- a/about/index.html
+++ b/about/index.html
@@ -5,6 +5,6 @@
 <p>使用 Astro 构建</p>
 <p>部署在 Github Pages</p>
 <h2 id="信息收集">信息收集</h2>
-<p>底下的计数器会收集每次访问本站的地区、浏览器。但也只有这个了。</p> </article>  <footer class="flex my-8 flex-col items-center"> <img class="h-20" src="https://meow-counter.icealtria.workers.dev/get/about" alt="meow counter"> <div class="gap-2 flex justify-center items-center">
+<p>底下的计数器会收集每次访问本站的地区、浏览器。但也只有这个了。</p> </article>  <footer id="footer" class="flex my-8 flex-col items-center"> <img class="h-20" src="https://meow-counter.icealtria.workers.dev/get/about" alt="meow counter"> <div class="gap-2 flex justify-center items-center">
 Copyright &copy; 2024 <span>icealtria</span>|
 <a href="/atom.xml">RSS</a> </div> </footer> </div> </body></html>
