--- a/about/index.html
+++ b/about/index.html
@@ -7,6 +7,6 @@
 <h2 id="信息收集">信息收集</h2>
 <p>底下的计数器会收集每次访问本站的地区和浏览器信息。这些数据仅用于了解网站的访问情况。</p>
 <p>如果你有任何问题或建议，欢迎通过 icealtria at gmail dot com 与我联系。</p>
-<p><img src="/green-team.svg" alt="512k club"></p> </article>  <footer id="footer" class="flex my-8 flex-col items-center"> <img class="h-20" src="https://meow-counter.icealtria.workers.dev/get/about" alt="meow counter"> <div class="gap-2 flex justify-center items-center">
+<p><img src="/green-team.svg" alt="512k club"></p> </article>  <footer id="footer" class="flex my-8 flex-col items-center"> <img class="h-20" src="https://count.kururin.cc/get/about" alt="meow counter"> <div class="gap-2 flex justify-center items-center">
 Copyright &copy; 2025 <span>icealtria</span>|
 <a href="/atom.xml">RSS</a> </div> </footer> </div> </body></html>
