--- a/font/index.html
+++ b/font/index.html
@@ -14,6 +14,6 @@
 .font-weight-extrabold { font-weight: 800; }
 .font-weight-black { font-weight: 900; }
 .space-y-4 > * + * { margin-top: 1rem; }
-</style> </article>  <footer id="footer" class="flex my-8 flex-col items-center"> <img class="h-20" src="https://meow-counter.icealtria.workers.dev/get/font" alt="meow counter"> <div class="gap-2 flex justify-center items-center">
+</style> </article>  <footer id="footer" class="flex my-8 flex-col items-center"> <img class="h-20" src="https://count.kururin.cc/get/font" alt="meow counter"> <div class="gap-2 flex justify-center items-center">
 Copyright &copy; 2025 <span>icealtria</span>|
 <a href="/atom.xml">RSS</a> </div> </footer> </div> </body></html>
