Update from https://github.com/icealtria/blog/commit/c77174a12bc7b95183bd8f7450a10b2a76850597

--- a/font/index.html
+++ b/font/index.html
@@ -15,5 +15,5 @@
 .font-weight-black { font-weight: 900; }
 .space-y-4 > * + * { margin-top: 1rem; }
 </style> </article>  <footer id="footer" class="flex my-8 flex-col items-center"> <img class="h-20" src="https://count.kururin.cc/get/font" alt="meow counter"> <div class="gap-2 flex justify-center items-center">
-Copyright &copy; 2025 <span>icealtria</span>|
+Copyright &copy; 2023 - 2025 <span>icealtria</span>|
 <a href="/atom.xml">RSS</a> </div> </footer> </div> </body></html>
