Update from https://github.com/icealtria/blog/commit/1f8dfa50afdafaa42fadf16492063a8800d53b3b

--- a/about/index.html
+++ b/about/index.html
@@ -13,13 +13,7 @@
 <p>永久域名（只要 Github 不倒闭） <a href="https://icealtria.github.io/">https://icealtria.github.io/</a></p>
 <h2 id="所用技术">所用技术</h2>
 <p>使用 <a href="https://astro.build/">Astro</a> 在 Github Actions 上构建，并部署在 <a href="https://pages.cloudflare.com/">Cloudflare Pages</a> 和 <a href="https://pages.github.com/">Github Pages</a>。</p>
-<ul>
-<li>Astro: 5.16.11</li>
-<li>pnpm: 10.28.1</li>
-<li>Node: v25.4.0</li>
-<li>System: Linux</li>
-<li>Arch: x64</li>
-</ul>
+<div class="version-info"> <h3>Build Info</h3> <ul> <li><strong>Astro:</strong> 5.16.11</li> <li><strong>PNPM:</strong> 10.28.2</li> <li><strong>Node.js:</strong> v25.5.0</li> <li><strong>System:</strong> Linux (x64)</li> </ul> </div>
 <h2 id="信息收集">信息收集</h2>
 <p>底下的计数器会收集每次访问本站的地区和浏览器信息。这些数据仅用于了解网站的访问情况。</p>
 <h2 id="联系我">联系我</h2>
